Implement quick period key

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -465,6 +465,8 @@
     <string name="keyboard_settings_show_suggestion_row_subtitle">Show the bar containing suggestions. Recommended to keep enabled</string>
     <string name="keyboard_settings_inline_autofill">Inline autofill</string>
     <string name="keyboard_settings_inline_autofill_subtitle">Display password manager autofill and auto-reply suggestions (provided by app) in suggestion bar</string>
+    <string name="keyboard_settings_period_key">Quick period key</string>
+    <string name="keyboard_settings_period_key_subtitle">Flick the period key to quickly insert most common symbols</string>
 
     <!-- misc titles -->
     <string name="settings_keyboard_typing_title">Keyboard &amp; Typing</string>
