--- a/java/res/xml/spellchecker.xml
+++ b/java/res/xml/spellchecker.xml
@@ -59,4 +59,40 @@
             android:label="@string/subtype_generic"
             android:subtypeLocale="pt_BR"
     />
+   <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="pt_PT"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="bn"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="bg"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="nl"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="el"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="hu"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="pl"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="sv"
+    />
+    <subtype
+            android:label="@string/subtype_generic"
+            android:subtypeLocale="tr"
+    />
 </spell-checker>
