--- a/java/res/values-fr-rCA/donottranslate-config-spacing-and-punctuations.xml
+++ b/java/res/values-fr-rCA/donottranslate-config-spacing-and-punctuations.xml
@@ -25,7 +25,7 @@
     <string name="symbols_followed_by_space">.,;:!?)]}</string>
     <!-- Symbols that separate words -->
     <!-- Don't remove the enclosing double quotes, they protect whitespace (not just U+0020) -->
-    <string name="symbols_word_separators">"&#x0009;&#x0020;&#x000A;&#x00A0;"()[]{}*&amp;&lt;&gt;+=|.,;:!?/_\"</string>
+    <string name="symbols_word_separators">"&#x0009;&#x0020;&#x000A;&#x00A0;"()[]{}*&amp;&lt;&gt;+=|.,;:!?/_\"-</string>
     <!-- Word connectors -->
-    <string name="symbols_word_connectors">\'-</string>
+    <string name="symbols_word_connectors">\'</string>
 </resources>
