--- a/java/res/values-fr/donottranslate-config-spacing-and-punctuations.xml
+++ b/java/res/values-fr/donottranslate-config-spacing-and-punctuations.xml
@@ -26,7 +26,7 @@
     <string name="symbols_clustering_together">!?</string>
     <!-- Symbols that separate words -->
     <!-- Don't remove the enclosing double quotes, they protect whitespace (not just U+0020) -->
-    <string name="symbols_word_separators">"&#x0009;&#x0020;&#x000A;&#x00A0;"()[]{}*&amp;&lt;&gt;+=|.,;:!?/_\"-</string>
+    <string name="symbols_word_separators">"&#x0009;&#x0020;&#x000A;&#x00A0;"()[]{}*&amp;&lt;&gt;+=|.,;:!?/_\"-#$`\\%&#x00bf;&#x00a1;&#x00bf;&#x2014;&#x2013;&#x201e;&#x201c;&#x201d;&#x00ab;&#x00bb;&#x2039;&#x203a;&#x2026;~</string>
     <!-- Word connectors -->
     <string name="symbols_word_connectors">\'</string>
 </resources>
