Update payment menu

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -236,6 +236,7 @@
 
     <string name="payment_screen_pay_via_google">Pay via Google Play (<xliff:g name="price" example="~$2.99">%s</xliff:g> + tax)</string>
     <string name="payment_screen_pay_via_futopay">Pay (<xliff:g name="price" example="~$2.99">%s</xliff:g> + tax)</string>
+    <string name="payment_screen_pay_via_futopay2">Pay via FUTO Pay (<xliff:g name="price" example="~$2.99">%s</xliff:g> + tax)</string>
     <string name="payment_screen_more_options">More options</string>
 
     <string name="payment_screen_payment_complete_title">Payment Complete</string>
