Change CustomThemes to a more general ZipThemes, including support for theme assets

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -491,7 +491,8 @@
     <string name="theme_settings_title">Theme</string>
     <string name="theme_settings_key_borders">Key borders</string>
     <string name="theme_settings_default_themes">Built-in</string>
-    <string name="theme_settings_custom_themes">Custom</string>
+    <string name="theme_settings_seasonal_themes">Seasonal</string>
+    <string name="theme_settings_custom_themes">Your themes</string>
     <string name="theme_settings_custom_theme_delete_title">Delete custom theme?</string>
     <string name="theme_settings_custom_theme_delete_body">Theme: %s</string>
     <string name="theme_settings_custom_theme_delete_confirm">Delete</string>
