--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -473,7 +473,7 @@
     <string name="keyboard_settings_inline_autofill">Inline autofill</string>
     <string name="keyboard_settings_inline_autofill_subtitle">Display password manager autofill and auto-reply suggestions (provided by app) in suggestion bar</string>
     <string name="keyboard_settings_period_key">Quick period key</string>
-    <string name="keyboard_settings_period_key_subtitle">Flick the period key to quickly insert most common symbols</string>
+    <string name="keyboard_settings_period_key_subtitle2">Replaces the layout of long-pressed period key with a flickable layout: ! , . ?</string>
 
     <string name="keyboard_settings_number_row_title">Number row</string>
     <string name="keyboard_settings_number_row_style">Number row style</string>
