Added modern dark theme with a custom font and made some UI refinements

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -159,6 +159,7 @@
     <string name="theme_cotton_candy">Cotton Candy</string>
     <string name="theme_hotdog">Hot Dog</string>
     <string name="theme_high_contrast_yellow">High Contrast Yellow</string>
+    <string name="theme_modern_dark">Modern Dark</string>
     <string name="theme_dev">Construction Theme</string>
     <string name="theme_dynamic_system">Dynamic Auto</string>
     <string name="theme_dynamic_dark">Dynamic Dark</string>
