Add URL tracking parameter stripping for clipboard    Implements GitHub issue #556 - automatically removes tracking parameters    (utm_*, fbclid, si, etc.) from URLs copied to the clipboard using the ClearURLs ruleset.    - Add UrlCleaner.kt utility that parses url-rules.json and strips tracking params    - Add ClipboardStripUrlTracking setting (disabled by default)    - Modify ClipboardHistoryManager to clean URLs when copied    - Modify QuickClip to display cleaned URLs in suggestion bar    - Add url-rules.json from ClearURLs project to assets

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -93,6 +93,9 @@
     <string name="action_clipboard_manager_settings_list_layout">Use vertical list layout instead of grid</string>
     <string name="action_clipboard_manager_settings_show_pinned_above_others">Keep pinned clips on top</string>
     <string name="action_clipboard_manager_settings_show_quick_clips">Show recently copied text in suggestion bar</string>
+    <!--  For cleaning URLs based on the JSON ruleset of clearURLs  -->
+    <string name="action_clipboard_manager_strip_url_tracking_title">Remove URL tracking parameters</string>
+    <string name="action_clipboard_manager_strip_url_tracking_subtitle">Automatically strip tracking parameters (utm_*, ?si=, etc.) from copied URLs</string>
 
     <!-- For keyboard modes action -->
     <string name="action_keyboard_modes_title">Keyboard Modes</string>
