Initial Chinese implementation using RIME
Co-authored-by: Aleksandras Kostarevas <alex@futo.org>

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -604,6 +604,11 @@
     <!-- Settings category title -->
     <string name="language_specific_settings_title">Language-specific settings</string>
 
+    <!-- Specific to Chinese input method -->
+    <string name="chinese_settings_title">Chinese Input Settings</string>
+    <string name="chinese_setting_search_tags">chinese, rime</string>
+    <string name="action_rime_dashboard">Rime Dashboard</string>
+
     <!-- Specific to Japanese input method -->
     <string name="japanese_settings_title">Japanese Input Settings</string>
     <string name="japanese_settings_toggle_flick_only">Flick only</string>
