Resolve localization TODO

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -290,6 +290,8 @@
     <string name="settings_search_enter_your_search">Enter a search term…</string>
     <string name="settings_search_no_options_found">No results found</string>
     <string name="misc_settings_title">Miscellaneous</string>
+    <string name="setting_section_collapsed">Collapsed</string>
+    <string name="setting_section_expanded">Expanded</string>
 
     <!-- When adding a new language -->
     <string name="language_settings_title">Languages &amp; Models</string>
