Add Fleksy swipe mode

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -421,6 +421,7 @@
     <string name="morekey_settings_space_behavior_swipe_cursor">Swiping moves cursor, long-pressing switches language</string>
     <string name="morekey_settings_space_behavior_swipe_lang">Swiping changes language, long-pressing moves cursor</string>
     <string name="morekey_settings_space_behavior_only_cursor">Swiping and long-pressing only moves cursor</string>
+    <string name="morekey_settings_space_behavior_swipe_actions">Swipe actions (Fleksy-style)</string>
 
     <!-- Types of morekeys that can be configured, and examples of them -->
     <string name="morekey_settings_kind_numbers">Numbers</string>
