--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -439,10 +439,11 @@
     <!-- typing settings -->
     <string name="typing_settings_title">Typing preferences</string>
     <!-- When translating, rename it to gesture typing if it makes more sense for that language -->
+    <string name="typing_settings_swipe_group_label">Swipe input mode</string>
     <string name="typing_settings_swipe">Swipe Typing (alpha)</string>
     <string name="typing_settings_swipe_subtitle">Allow swiping from key to key to write words.</string>
-    <string name="typing_settings_swipe_actions_mode">Swipe Actions Mode (alpha)</string>
-    <string name="typing_settings_swipe_actions_mode_subtitle">Fleksy-style directional swipes anywhere on the keyboard. Disables Swipe Typing.</string>
+    <string name="typing_settings_swipe_actions_mode">Swipe Actions (alpha)</string>
+    <string name="typing_settings_swipe_actions_mode_subtitle">Fleksy-style directional swipes anywhere on the keyboard.</string>
     <string name="typing_settings_suggest_emojis">Emoji Suggestions</string>
     <string name="typing_settings_suggest_emojis_subtitle">Suggest emojis while you\'re typing</string>
     <string name="typing_settings_vibration_strength">Vibration</string>
